assets/css/style.css
/* font face by Anke Arnold (www.anke-art.de) */
@font-face {
    font-family: 'ParryHotter';
    src: url('fonts/ParryHotter.ttf');
    font-weight: normal;
    font-style: normal;
}

/*----------------------------------------- colour*/
.gryffindor-red {
   border-color: #d11404;
   border-width: 3px;
}

.slytherin-green {
   border-color: #04540c;
   border-width: 3px;
}

.hufflpuff-yellow {
   border-color: #f5cd11;
   border-width: 3px;
}

.ravenclaw-blue {
   border-color: #3078ac;
   border-width: 3px;
}

/*------------------------------------------Global*/
html, body {
   margin: 0;
   padding: 0;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 700;
   color: #fff;
   background-color:#200236;
   width: 100%;
   min-height: 100vh;
   height: 100vh;
   position: absolute;
   overflow: hidden;
}
.inline-block{
   display: inline-block;
}

a {
   color: #fff;
}

h1 {
   padding: 0%;
   font-size: 40px;  
   font-family: "ParryHotter", sans-serif;
   color: #f5cd11;
}
/*------------------------------------------Header*/
header{
   margin: 0;
   min-height: 20px;
   z-index: 10;
   position: fixed;
   top: 0;
   width: 100vw;
}
.navbar-dark {
   float: right;
   top:0;
   border-width: 0 0 1px;
}

.nav-item {
   font-size: 20px;
   font-weight: 500;
}
.navbar-dark .navbar-nav .nav-link{
   color: #ffffff;
}
button.navbar-toggler{
   float: right;
}

/*------------------------------------------Footer*/
footer {
   margin: 0;
   min-height: 50px;
   z-index: 10;
   position: fixed;
   bottom:0;
   width: 100vw;
}
footer ul {
   width: 100%;
   padding: 0;
   margin: 0;
   margin-top: 10px;
}
.footer ul li {
   list-style: none;
   margin-top: 12px;
   padding: 0;
}
.social-media {
   font-size: 25px;
   font-weight: bold;
   position: relative;
   text-align: center;
}

/*---------------------------------------Home Page*/
.school-crest-container{
   max-height: 100vh;
   max-width: 100vw;
   justify-content: center;
   padding: 5% 0;
   align-items: center;
   position: absolute;
}

.title{
   height: 10vh;
   padding-bottom: 1%;
   text-align: center;
}
.hogwarts-crest{
   text-align: center;
   width: 30%;
   margin: auto;
   display: block;
}
/*---------------------------------------Game Page*/
.house-crest-container{
   max-height: 100vh;
   max-width: 100vw;
   justify-content: center;
   padding: 5% 0;
   align-items: center;
   position: absolute;
}
.game-btn {
   border-radius: 5%;
   width: 50%;
   height: auto;
   top: 25%;
   padding: 15px;
   z-index: 2;
   /*display: block;*/
}

.gryffindor, .hufflepuff{
   margin-left: 50%;
   margin-right: 0;
   justify-items: right;
}
.slytherin, .ravenclaw{
   margin-left: 0;
   margin-right: 50%;
   justify-items: left;
}


/*----------------------------------------Help*/

/*---------------------------------------About*/

/*---------------------------------Media Queries*/
@media (max-width:4096px) {
   .navbar-fixed-top {
      top:0;
      border-width: 0 0 1px;
   }
   .navbar-toggle {
      display: block;
   }
}
@media (max-width: 1024px) {
   .school-crest-container{
      padding-top: 25%;
   }
   h1 { 
      padding-bottom: 10%;
   }
   .hogwarts-crest{
      width: 60%;
   }
 /*  .game-btn {
      border-radius: 5%;
      width: 80%;
      height: auto;
      top: 25%;
      padding: 15px;
      z-index: 2;
      display: block;
   }
   .gryffindor, .hufflepuff{
      margin-left: 0%;
   }
   .slytherin, .ravenclaw{
      margin-right: 0%;
   }*/
}
@media (max-width: 768px) {
   .school-crest-container{
      padding-top: 20%;
   }
   h1 {
      padding: 10% 0;
   }
   .top-row {
      padding-top: 10%;
   }
   .hogwarts-crest{  
      width: 70%;
   }
   .game-btn {
      width: 90%;

   }
   .gryffindor, .hufflepuff{
      margin-left: 0%;
   }
   .slytherin, .ravenclaw{
      margin-right: 0%;
   }
}
@media (max-width: 540px) {
   .school-crest-container{
      padding-top: 30%;
   }
   h1 {
      font-size: 34px; 
   }
   .hogwarts-crest{
      width: 80%;
   }
   .game-btn {
      width: 90%;
   }
  .gryffindor, .hufflepuff{
      margin-left: 15%;
   }
   .slytherin, .ravenclaw{
      margin-right: 15%;
   }*/
}

